src/components/UserDashboard/UserDashboard.module.css
.userDashboardContainer {
  min-height: calc(100% - 56px);
  display: flex;
}
.ant-card-head-title {
  padding: 0 !important;
}

.userDashboardContent {
  width: 100%;
  min-height: 600px;
  background-color: #f4f5f8;
}

.dashboardTitle {
  font-family: Montserrat, sans-serif;
  font-size: 28px;
  font-weight: 500;
  text-align: left;
  color: #2b388f;
  margin-top: 26px;
  margin-bottom: 24px;
  padding-left: 30px;
}

/*******************************************************/
/* Info */
/*******************************************************/
.infoLink {
  font-size: 14px;
  font-family: Open Sans, sans-serif;
  margin-bottom: 0;
  text-decoration: underline;
}

.infoMessage {
  font-size: 14px;
  color: #343434;
  font-family: Open Sans, sans-serif;
  margin-bottom: 0;
}

/*******************************************************/
/* DashboardCard */
/*******************************************************/
.dashboardCard {
  height: 404px;
}

.dashboardCardWrapper {
  border-radius: 10px;
  border: solid 1px #e0e1e6;
  box-shadow: 0 0 9.5px 0.5px rgba(160, 160, 163, 0.25);
  padding: 20px 30px;
}

.noteList {
  padding-left: 18px;
}
.noteList li {
  margin-top: 5px;
}

/* // TODO REMOVE, UNUSED? */
.promptMessageContainer {
}
.promptMessageContent {
  font-family: Open Sans, sans-serif;
  font-size: 14px;
  line-height: normal;
}
.promptMessageContent ul {
  padding-left: 18px;
}
.promptMessageContent li {
  margin-top: 5px;
}
.promptMessageHeading {
  font-family: Montserrat, sans-serif;
  font-weight: 500;
  font-size: 16px;
}

.wrapperVerticalBarChart {
  height: 265px;
}

.wrapperMemberResearchInterests {
  height: 265px;
}

.wrapperMostParticipantsStudiesChart {
  height: 300px;
}

.studiesList, .projectsListWrapper {
  max-height: 300px;
}

.projectsListSpinner {
  display: flex;
  justify-content: center;
  height: 100%;
  margin-top: 75px;
}

